@@ -1,5 +1,11 @@
 2006-04-04  Edward Hervey  <edward@fluendo.com>
 
+	* tests/check/simple.c: (GST_START_TEST), (gnonlin_suite):
+	Added new test to check start/duration/stop correctness for
+	sources and compositions.
+
+2006-04-04  Edward Hervey  <edward@fluendo.com>
+
 	* gnl/gnlobject.c: (gnl_object_remove_ghost_pad):
 	Free the GnlPadPrivate once we have removed the pad.
 
